--- a/ModbusTCP/ModbusTCP.csproj
+++ b/ModbusTCP/ModbusTCP.csproj
@@ -7,7 +7,7 @@
     <Platforms>x86;x64;AnyCPU</Platforms>
   </PropertyGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net9.0-windows7.0'">
 		<PackageReference Include="System.IO.Ports" Version="9.0.4" />
   </ItemGroup>
 
