--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,6 +93,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: ${{ github.event.repository.name }}.nupkg.${{ needs.version.outputs.version }}
+          path: ./nupkg
 
       - name: Upload to release
         shell: powershell
