switching to net9.0 (cross-platform)

--- a/LiteModbus/LiteModbus.csproj
+++ b/LiteModbus/LiteModbus.csproj
@@ -8,7 +8,7 @@
     <RuntimeIdentifiers>win-x64;win-x86</RuntimeIdentifiers>
   </PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net9.0-windows7.0'">
+  <ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
     <PackageReference Include="System.IO.Ports" Version="9.0.4" />
   </ItemGroup>
 
