--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -8,7 +8,7 @@
 	</PropertyGroup>
   
   <PropertyGroup>
-    <TargetFrameworks>net462;net48;net9.0-windows7.0</TargetFrameworks>
+    <TargetFrameworks>net462;net48;net9.0</TargetFrameworks>
     <Version>0.0.0</Version>
     <PackageOutputPath>$(SolutionDir)nupkg</PackageOutputPath>
   </PropertyGroup>
